--- a/app/components/participation-list/mandataris-row.hbs
+++ b/app/components/participation-list/mandataris-row.hbs
@@ -4,7 +4,7 @@
   <td>{{plain-date @mandataris.isBestuurlijkeAliasVan.geboorte.datum}}</td>
   <td>
     <label class="checkbox checkbox--block">
-      <input class="checkbox__toggle" type="checkbox" checked={{@selected}} {{on "input" (fn @toggle @mandataris @selected)}} />
+      <input class="checkbox__toggle" type="checkbox" checked={{@selected}} {{on "input" (fn @toggle @mandataris @selected)}} disabled={{@disabled}} />
       <span></span>
       <strong>{{t "participationListModalTable.checkboxLabel"}}</strong>
     </label>
