Add revision dropdown in show

--- a/app/templates/regulatory-statements/show.hbs
+++ b/app/templates/regulatory-statements/show.hbs
@@ -1,51 +1,83 @@
-<AppChrome
-  @editorDocument={{this.model.editorDocument}}
-  @documentContainer={{this.model.documentContainer}}
-  @documentStatus={{this.model.documentContainer.currentVersion.status}}
+<div 
+  {{did-update (perform this.fetchRevisions)}} 
+  {{did-insert (perform this.fetchRevisions)}} 
 >
-  <:return-link>
-  <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}}>
-    <AuIcon @icon="arrow-left" @alignment="left" />
-    {{t 'inbox.regulatoryStatements.return'}}
-  </AuLink>
-  </:return-link>
-  <:actions>
-  <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
-    <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
-      <AuIcon @icon="export" @alignment="left" />
-      {{t "utils.htmlExport"}}
-    </AuButton>
-  </AuDropdown>
-  {{#if this.currentSession.canWrite}}
-    <AuButton {{on "click" (perform this.createNewVersion)}} @disabled={{this.createNewVersion.isRunning}}>
-      {{t "utils.createNewVersion"}}
-    </AuButton>
-  {{/if}}
-  </:actions>
-</AppChrome>
+  <AppChrome
+    @editorDocument={{this.model.editorDocument}}
+    @documentContainer={{this.model.documentContainer}}
+    @documentStatus={{this.model.documentContainer.currentVersion.status}}
+  >
+    <:return-link>
+    <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}}>
+      <AuIcon @icon="arrow-left" @alignment="left" />
+      {{t 'inbox.regulatoryStatements.return'}}
+    </AuLink>
+    </:return-link>
+    <:actions-after-title>
+      <AuDropdown @title={{human-friendly-date this.model.editorDocument.updatedOn}} @buttonLabel={{human-friendly-date
+        this.model.editorDocument.updatedOn}} @alignment="left">
+        <LinkTo @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}}
+                class="au-u-padding-small regulatory-statement-current-version-container">
+          <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
+          <span class="au-u-light">{{human-friendly-date this.model.currentVersion.updatedOn}}</span>
+        </LinkTo>
+        <AuHr/>
+        <div class="au-u-margin-small au-u-flex--column au-u-flex">
+          <p class="au-u-muted">{{t 'utils.history'}}: </p>
+          {{#each this.revisions as |revision|}}
+            <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" @models={{array
+              this.model.documentContainer.id revision.id}}>
+              {{human-friendly-date revision.updatedOn}}
+              {{#if revision.status.label}}
+                <AuPill @skin='success'>{{revision.status.label}}</AuPill>
+              {{/if}}
+            </AuLink>
+          {{/each}}
+          <AuLink @route="regulatory-statements.show.history" @skin="link" role="menuitem">
+            <AuIcon @icon="clock" @alignment="left"/>
+            {{t 'utils.fullHistory'}}
+          </AuLink>
+        </div>
+      </AuDropdown>
+    </:actions-after-title>
+    <:actions>
+    <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
+      <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
+        <AuIcon @icon="export" @alignment="left" />
+        {{t "utils.htmlExport"}}
+      </AuButton>
+    </AuDropdown>
+    {{#if this.currentSession.canWrite}}
+      <AuButton {{on "click" (perform this.createNewVersion)}} @disabled={{this.createNewVersion.isRunning}}>
+        {{t "utils.createNewVersion"}}
+      </AuButton>
+    {{/if}}
+    </:actions>
+  </AppChrome>
 
-<div class="au-c-body-container">
-  <div class="au-c-rdfa-editor">
-    <div class="say-container say-container--sidebar-left say-container--paper say-container--sidebar-right">
-      <div class="say-container__main">
-        {{#unless this.readOnly}}
-          <div class="au-o-box au-o-box--small au-u-background-gray-100">
-            <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
-              <p>Dit reglement is reeds gepubliceerd. Gepubliceerde reglementaire bijlagen zijn niet editeerbaar.</p>
-            </AuAlert>
-          </div>
-        {{/unless}}
-        <div class="say-editor rdfa-annotations rdfa-annotations-hover rdfa-annotations--disabled">
-          <div class="say-editor__paper">
-            <div class="say-editor__inner say-content say-content--disabled">
-              {{ this.model.editorDocument.htmlSafeContent }}
+  <div class="au-c-body-container">
+    <div class="au-c-rdfa-editor">
+      <div class="say-container say-container--sidebar-left say-container--paper say-container--sidebar-right">
+        <div class="say-container__main">
+          {{#unless this.readOnly}}
+            <div class="au-o-box au-o-box--small au-u-background-gray-100">
+              <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
+                <p>Dit reglement is reeds gepubliceerd. Gepubliceerde reglementaire bijlagen zijn niet editeerbaar.</p>
+              </AuAlert>
+            </div>
+          {{/unless}}
+          <div class="say-editor rdfa-annotations rdfa-annotations-hover rdfa-annotations--disabled">
+            <div class="say-editor__paper">
+              <div class="say-editor__inner say-content say-content--disabled">
+                {{ this.model.editorDocument.htmlSafeContent }}
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+
+  {{outlet}}
 </div>
-
-
-{{outlet}}
