--- a/app/templates/regulatory-statements/revisions.hbs
+++ b/app/templates/regulatory-statements/revisions.hbs
@@ -16,7 +16,7 @@
     <:actions-after-title>
       <AuDropdown @title={{human-friendly-date this.model.editorDocument.updatedOn}} @buttonLabel={{human-friendly-date
         this.model.editorDocument.updatedOn}} @alignment="left">
-        <LinkTo @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}}
+        <LinkTo @route="{{if this.model.currentVersion.status 'regulatory-statements.show' 'regulatory-statements.edit'}}" @model={{this.model.documentContainer.id}}
                 class="au-u-padding-small regulatory-statement-current-version-container">
           <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
           <span class="au-u-light">{{human-friendly-date this.model.currentVersion.updatedOn}}</span>
