limit content in inbox

--- a/app/components/agenda-punt-link.hbs
+++ b/app/components/agenda-punt-link.hbs
@@ -1,5 +1,5 @@
 {{#if (or (eq this.editorStatus "published") @readOnly)}}
-  <LinkTo @route="agendapoints.show" @model={{@documentContainer.id}} class="au-c-link">{{@documentContainer.currentVersion.title}}</LinkTo>
+  <LinkTo @route="agendapoints.show" @model={{@documentContainer.id}} class="au-c-link">{{limit-content @documentContainer.currentVersion.title 70}}</LinkTo>
 {{else}}
-  <LinkTo @route="agendapoints.edit" @model={{@documentContainer.id}} class="au-c-link">{{@documentContainer.currentVersion.title}}</LinkTo>
+  <LinkTo @route="agendapoints.edit" @model={{@documentContainer.id}} class="au-c-link">{{limit-content @documentContainer.currentVersion.title 70}}</LinkTo>
 {{/if}}
