--- a/app/components/document-history.hbs
+++ b/app/components/document-history.hbs
@@ -14,7 +14,7 @@
         <span class="au-u-light">{{human-friendly-date @currentVersion.updatedOn}}</span>
       </p>
     {{else}}
-      <LinkTo @route="regulatory-statements.edit" @model={{@documentContainerId}} class="au-u-padding-small regulatory-statement-current-version-container">
+      <LinkTo @route={{if (or @currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}} @model={{@documentContainerId}} class="au-u-padding-small regulatory-statement-current-version-container">
         <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
         <span class="au-u-light">{{human-friendly-date @currentVersion.updatedOn}}</span>
       </LinkTo>
