--- a/app/templates/regulatory-statements/revisions.hbs
+++ b/app/templates/regulatory-statements/revisions.hbs
@@ -8,7 +8,7 @@
     @documentStatus={{this.model.editorDocument.status}}
   >
     <:return-link>
-      <AuLink @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}}>
+      <AuLink @route={{if (or this.model.currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}} @model={{this.model.documentContainer.id}}>
         <AuIcon @icon="arrow-left" @alignment="left"/>
         {{t 'inbox.regulatoryStatements.revisionsReturn'}}
       </AuLink>
@@ -16,7 +16,7 @@
     <:actions-after-title>
       <AuDropdown @title={{human-friendly-date this.model.editorDocument.updatedOn}} @buttonLabel={{human-friendly-date
         this.model.editorDocument.updatedOn}} @alignment="left">
-        <LinkTo @route="{{if this.model.currentVersion.status 'regulatory-statements.show' 'regulatory-statements.edit'}}" @model={{this.model.documentContainer.id}}
+        <LinkTo @route="{{if (or this.model.currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}}" @model={{this.model.documentContainer.id}}
                 class="au-u-padding-small regulatory-statement-current-version-container">
           <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
           <span class="au-u-light">{{human-friendly-date this.model.currentVersion.updatedOn}}</span>
@@ -64,7 +64,7 @@
               <AuAlert @icon="info-circle" @title={{t "inbox.regulatoryStatements.readOnlyBanner.title"}}  @skin="info"
                        @size="small" class="au-u-margin-bottom-none">
                 {{#if this.model.editorDocument.status}}
-                  <p>{{t "inbox.regulatoryStatements.readOnlyBanner.publishedMessage"}}</p>
+                  <p>{{t "inbox.regulatoryStatements.readOnlyBanner.oldPublishedMessage"}}</p>
                 {{else}}
                   <p>{{t "inbox.regulatoryStatements.readOnlyBanner.message"}}</p>
                 {{/if}}
