support long titles in uittreksels publication

--- a/app/templates/meetings/publish/uittreksels/index.hbs
+++ b/app/templates/meetings/publish/uittreksels/index.hbs
@@ -28,7 +28,7 @@
 
     <c.body as  |agendapoint|>
       <td>{{inc agendapoint.position}}</td>
-      <td><AuLink @route="meetings.publish.uittreksels.show" @model={{agendapoint.behandeling.id}}>{{agendapoint.titel}}</AuLink></td>
+      <td><AuLink @route="meetings.publish.uittreksels.show" @model={{agendapoint.behandeling.id}}>{{limit-content agendapoint.titel 70}}</AuLink></td>
       <td>
         <Signatures::PublicationStatus @versionedResource={{agendapoint.behandeling.versionedBehandeling}} />
       </td>
