--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -2,7 +2,7 @@
 <AuCard @divided={{true}} @flex={{true}} @expandable={{this.expandable}} class="au-u-margin-bottom-small au-c-card--publish" as |c| >
   <c.header @badgeIcon={{this.iconName}} @badgeSkin="brand">
     <AuToolbar @nowrap={{true}}>
-      <AuHeading @level="2" @skin="3" class="au-u-capitalize">
+      <AuHeading @level="2" @skin="3" class="au-u-capitalize au-u-word-break-all">
         {{this.headerWithDefault}}
       </AuHeading>
       {{#if this.algemeneStatus}}
@@ -14,7 +14,7 @@
     {{!-- Preview --}}
     <AuToolbar @nowrap={{true}} as |Group|>
       <Group>
-        <AuHeading @level="2" @skin="4">{{this.title}}</AuHeading>
+        <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{this.title}}</AuHeading>
       </Group>
       <Group>
         <AuPill @skin={{this.voorVertoningStatus.color}} class="au-u-margin-left">
@@ -41,7 +41,7 @@
       {{!-- Sign --}}
       <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small"  as |Group|>
         <Group>
-          <AuHeading @level="2" @skin="4">{{concat (t "timelineStep.signStepTitle") @name}}</AuHeading>
+          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{concat (t "timelineStep.signStepTitle") @name}}</AuHeading>
         </Group>
         <Group>
           <AuPill @skin={{this.handtekeningStatus.color}} class="au-u-margin-left">
@@ -79,7 +79,7 @@
               @loading={{this.signDocument.isRunning}}
               @disabled={{or (or (not this.currentSession.canSign) this.signDocument.isRunning) this.isSignedByCurrentUser}}
             >
-              {{t "timelineStep.signButtonLabel" name=@name}}
+              {{t "timelineStep.signButtonLabel" name=(limit-content @name 30)}}
             </AuButton>
           </div>
           <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
@@ -106,7 +106,7 @@
               @loading={{this.signDocument.isRunning}}
               @disabled={{or (not this.currentSession.canSign) this.signDocument.isRunning}}
             >
-              {{t "timelineStep.signButtonLabel" name=@name}}
+              {{t "timelineStep.signButtonLabel" name=(limit-content @name 30)}}
             </AuButton>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
@@ -118,7 +118,7 @@
               @iconAlignment="left"
               @disabled={{true}}
             >
-              {{t "timelineStep.signButtonLabel" name=@name}}
+              {{t "timelineStep.signButtonLabel" name=(limit-content @name 30)}}
             </AuButton>
           </div>
           <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
@@ -147,12 +147,12 @@
       {{#if this.canPrint}}
       <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
         <Group>
-          <AuHeading @level="2" @skin="4">{{t "timelineStep.printButtonLabel" name=@name}}</AuHeading>
+          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timelineStep.printButtonLabel" name=@name}}</AuHeading>
         </Group>
       </AuToolbar>
       <div class="au-u-margin-top-none au-u-margin-bottom-large">
         <AuButton {{ on 'click' @print }} >
-          {{t "timelineStep.printButtonLabel" name=@name}}
+          {{t "timelineStep.printButtonLabel" name=(limit-content @name 60)}}
         </AuButton>
       </div>
       {{/if}}
@@ -160,7 +160,7 @@
       {{!-- Publish --}}
       <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
         <Group>
-          <AuHeading @level="2" @skin="4">{{t "timelineStep.publishButtonLabel" name=@name}}</AuHeading>
+          <AuHeading @level="2" @skin="4" class="au-u-word-break-all">{{t "timelineStep.publishButtonLabel" name=@name}}</AuHeading>
         </Group>
         <Group>
           <AuPill @skin={{if @publishedResource "success"}} class="au-u-margin-left">
@@ -197,7 +197,7 @@
               @loading={{this.publishDocument.isRunning}}
               @disabled={{or (not this.currentSession.canPublish) this.publishDocument.isRunning}}
             >
-              {{t "timelineStep.publishButtonLabel" name=@name}}
+              {{t "timelineStep.publishButtonLabel" name=(limit-content @name 60)}}
             </AuButton>
           {{else}}
             <AuButton
@@ -207,7 +207,7 @@
               @loading={{this.publishDocument.isRunning}}
               @disabled={{or (not this.currentSession.canPublish) this.publishDocument.isRunning}}
             >
-              {{t "timelineStep.publishNotifyButtonLabel" name=@name}}
+              {{t "timelineStep.publishNotifyButtonLabel" name=(limit-content @name 60)}}
             </AuButton>
           {{/if}}
 
