--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -671,3 +671,12 @@ div.table-of-contents {
     background-color: var(--au-blue-200);
   }
 }
+
+div[typeof="besluit:Zitting"] {
+  div[property="besluit:heeftStemming"] {
+    div[property="besluit:heeftVoorstander"], div[property="besluit:heeftTegenstander"], div[property="besluit:heeftOnthouder"] {
+      display: none;
+    }
+  }
+}
+
