--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -37,11 +37,11 @@
   </table.menu>
   <table.content as |c|>
     <c.header>
-      <AuDataTableThSortable @field="currentVersion.title" @currentSorting={{this.sort}} @label={{t
+      <AuDataTableThSortable @field=":no-case:currentVersion.title" @currentSorting={{this.sort}} @label={{t
         'inbox.regulatoryStatements.titleLabel'}} />
       <AuDataTableThSortable @field="currentVersion.updatedOn" @currentSorting={{this.sort}} @label={{t
         'inbox.regulatoryStatements.updatedOnLabel'}} />
-      <AuDataTableThSortable @field="currentVersion.status.label" @currentSorting={{this.sort}} @label={{t
+      <AuDataTableThSortable @field=":no-case:currentVersion.status.label" @currentSorting={{this.sort}} @label={{t
         'inbox.regulatoryStatements.statusLabel'}} />
     </c.header>
     <c.body as |container|>
