--- a/app/components/document-history.hbs
+++ b/app/components/document-history.hbs
@@ -6,31 +6,34 @@
   @modalTitle={{t "utils.history"}}
   @modalOpen="true"
   @closeModal={{this.goBack}}
+  @padding="none"
    as |Modal| >
   <Modal.Body>
     {{#if @isCurrentVersion}}
-      <p class="au-u-padding-small regulatory-statement-current-version-container-active">
+      <p class="au-u-padding-small au-u-flex au-u-flex--between regulatory-statement-current-version-container-active">
         <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
         <span class="au-u-light">{{human-friendly-date @currentVersion.updatedOn}}</span>
       </p>
     {{else}}
-      <LinkTo @route={{if (or @currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}} @model={{@documentContainerId}} class="au-u-padding-small regulatory-statement-current-version-container">
-        <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
+    <p class="au-u-padding-small">
+      <LinkTo @route={{if (or @currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}} @model={{@documentContainerId}} class="regulatory-statement-current-version-container au-u-flex au-u-flex--between">
+        <span class="au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
         <span class="au-u-light">{{human-friendly-date @currentVersion.updatedOn}}</span>
       </LinkTo>
+    </p>
     {{/if}}
-    <AuHr />
-    <div class="au-u-margin-small au-u-flex--column au-u-flex">
+    <hr class="au-c-hr au-u-margin-none" />
+    <div class="au-u-flex--column au-u-flex">
       {{#each this.revisions as |revision|}}
         {{#if (eq revision.id @currentRevisionId)}}
-          <AuLink @route="regulatory-statements.revisions" @active="true" @skin="secondary" role="menuitem" @models={{array @documentContainerId revision.id}}>
+          <AuLink @route="regulatory-statements.revisions" @active="true" @skin="secondary" role="menuitem" class="au-u-padding-tiny au-u-padding-left-small" @models={{array @documentContainerId revision.id}}>
             {{human-friendly-date revision.updatedOn}}
             {{#if revision.status.label}}
               <AuPill @skin='success'>{{revision.status.label}}</AuPill>
             {{/if}}
           </AuLink>
         {{else}}
-          <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" @models={{array @documentContainerId revision.id}}>
+          <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" class="au-u-padding-tiny au-u-padding-left-small" @models={{array @documentContainerId revision.id}}>
             {{human-friendly-date revision.updatedOn}}
             {{#if revision.status.label}}
               <AuPill @skin='success'>{{revision.status.label}}</AuPill>
@@ -39,7 +42,7 @@
         {{/if}}
       {{/each}}
       {{#if this.hasMore}}
-        <AuButton @skin="link" {{on "click" (perform this.loadMore)}} >Load More</AuButton>
+        <AuButton @skin="link" class="au-u-padding-tiny au-u-padding-left-small" {{on "click" (perform this.loadMore)}} >Load More</AuButton>
       {{/if}}
     </div>
   </Modal.Body>
