--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -6,34 +6,32 @@
   @allowTitleUpdate={{true}}
 >
   <:return-link>
-  <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}}>
-      <AuIcon @icon="arrow-left" @alignment="left" />
+  <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}} @icon="arrow-left">
       {{t 'inbox.regulatoryStatements.return'}}
     </AuLink>
   </:return-link>
   <:actions-after-title>
     <AuDropdown @title={{t 'utils.currentVersion'}} @buttonLabel={{t 'utils.currentVersion'}} @alignment="left">
       <p class="au-u-padding-small regulatory-statement-current-version-container-active">
-        <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
+        <span class="au-u-medium au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
         <span class="au-u-light">{{human-friendly-date this.editorDocument.updatedOn}}</span>
       </p>
       <AuHr />
-      <div 
-        class="au-u-margin-small au-u-flex--column au-u-flex"
-        {{did-update (perform this.fetchRevisions)}} 
-        {{did-insert (perform this.fetchRevisions)}} 
+      <div
+        class="au-u-flex--column au-u-flex"
+        {{did-update (perform this.fetchRevisions)}}
+        {{did-insert (perform this.fetchRevisions)}}
       >
-        <p class="au-u-muted">{{t 'utils.history'}}</p>
+        <p class="au-u-muted au-u-medium au-u-padding-tiny au-u-padding-left-small">{{t 'utils.history'}}</p>
         {{#each this.revisions as |revision|}}
-          <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" @models={{array this.documentContainer.id revision.id}}>
+          <AuLink @route="regulatory-statements.revisions" @skin="secondary" class="au-u-padding-tiny au-u-padding-left-small" role="menuitem" @models={{array this.documentContainer.id revision.id}}>
             {{human-friendly-date revision.updatedOn}}
             {{#if revision.status.label}}
               <AuPill @skin='success'>{{revision.status.label}}</AuPill>
             {{/if}}
           </AuLink>
         {{/each}}
-        <AuLink @route="regulatory-statements.edit.history" @model={{this.documentContainer.id}} @skin="link" role="menuitem" >
-          <AuIcon @icon="clock" @alignment="left" />
+        <AuLink @route="regulatory-statements.edit.history" @model={{this.documentContainer.id}} @skin="link" @icon="clock" class="au-u-padding-tiny au-u-padding-left-small" role="menuitem">
           {{t 'utils.fullHistory'}}
         </AuLink>
       </div>
