finished new statuses on rs

--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -54,7 +54,7 @@
           <br>
         </td>
         <td>
-          <EditorStatusPill @status={{container.currentVersion.status}} />
+          <RegulatoryStatementStatusPill @container={{container}} />
         </td>
       {{/let}}
     </c.body>
