add new statuses to edit and show page

--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -30,7 +30,11 @@
     <Group>
       <div>
         {{#unless @editorDocument.isNew}}
-          <EditorStatusPill @status={{this.documentStatus}} />
+          {{#if @isRegulatoryStatement}}
+            <RegulatoryStatementStatusPill @container={{@documentContainer}} />
+          {{else}}
+            <EditorStatusPill @status={{this.documentStatus}} />
+          {{/if}}
         {{/unless}}
         {{#if @editorDocument.isNew}}
           <AuPill @skin="warning">
