update editor to 1.0.0-beta.5 and plugins to 1.0.0-beta.2 and include needed changes to plugin configs

--- a/app/components/editor-plugins/regulatory-statements/search-modal.hbs
+++ b/app/components/editor-plugins/regulatory-statements/search-modal.hbs
@@ -83,15 +83,15 @@
           </div>
           <div class="au-c-modal__footer">
             <AuToolbar>
-              <AuToolbarGroup>
+              <AuToolbar::Group>
                 <AuButton @skin="link" {{on "click" @closeModal}}>{{t "regulatoryStatementsPlugin.cancel"}}</AuButton>
-              </AuToolbarGroup>
-              <AuToolbarGroup>
+              </AuToolbar::Group>
+              <AuToolbar::Group>
                 <AuButton @disabled={{or (not this.selectedStatement) (this.isInserted this.selectedStatement)}} {{on "click" (fn @insertStatement
                   this.selectedStatement)}}>
                   {{t "regulatoryStatementsPlugin.insertStatement"}}
                 </AuButton>
-              </AuToolbarGroup>
+              </AuToolbar::Group>
             </AuToolbar>
           </div>
         </AuBodyContainer>
