--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,8 @@
 // PLUGINS
 @import "ember-rdfa-editor";
 @import "citaten-plugin";
+@import "date-plugin";
+@import "variable-plugin";
 @import "project/p-annotations"; // @TODO: refactor in ember-rdfa-editor
 
 
