add besluit-plugin stylesheet

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -36,6 +36,7 @@
 @import "citaten-plugin";
 @import "date-plugin";
 @import "variable-plugin";
+@import "besluit-plugin";
 @import "project/p-annotations"; // @TODO: refactor in ember-rdfa-editor
 
 
