--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -11,7 +11,7 @@
         {{#if @editorDocument.updatedOn}}
         <li class="au-c-list-horizontal__item">
           <span class="au-c-app-chrome__status">
-            {{t "appChrome.savedOn"}} {{human-friendly-date @editorDocument.updatedOn}}
+            {{t "appChrome.savedOn"}} {{human-friendly-date @editorDocument.updatedOn locale=this.intl.primaryLocale}}
           </span>
         </li>
         {{else}}
