create header component which shows user-header or login-header

--- a/app/components/vo-page.hbs
+++ b/app/components/vo-page.hbs
@@ -1,9 +1,4 @@
-<AuMainHeader @brandLink="https://www.vlaanderen.be/nl" @homeRoute="index" @appTitle="Gelinkt Notuleren" @contactRoute="contact">
-  <AcmidmLoginCompact @styles="au-c-button au-c-button--tertiary">
-    <AuIcon @icon="login" @alignment="left" />Aanmelden
-  </AcmidmLoginCompact>
-</AuMainHeader>
-
+<ApplicationHeader/>
 {{!-- Refocus after page navigation --}}
 <NavigationNarrator />
 
