--- a/app/templates/inbox.hbs
+++ b/app/templates/inbox.hbs
@@ -1,15 +1,4 @@
-<AuMainHeader @homeRoute="index" @appTitle="Gelinkt Notuleren" @contactRoute="contact">
-  <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
-    <Acmidm::Switch as |acmidm|>
-      <AuButton @loading={{acmidm.isSwitching}} class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" acmidm.switch}}>
-        <AuIcon @icon="switch" @alignment="left" />Wissel van bestuurseenheid
-      </AuButton>
-    </Acmidm::Switch>
-    <button type="button" class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" this.logout}}>
-      <AuIcon @icon="logout" @alignment="left" />Afmelden
-    </button>
-  </AuDropdown>
-</AuMainHeader>
+<ApplicationHeader/>
 
 <AuMainContainer as |maincontainer|>
   <maincontainer.sidebar>
