add wrong-account explanation to not-found warnings

--- a/app/templates/agendapoints-error.hbs
+++ b/app/templates/agendapoints-error.hbs
@@ -1,1 +1,3 @@
-<NotFoundWarning @icon="alert-triangle" @title={{t "agendapoint.not-found"}} />
+<NotFoundWarning @icon="alert-triangle" @title={{t "agendapoint.not-found.title"}}>
+  {{t "agendapoint.not-found.explanation"}}
+</NotFoundWarning>
