--- a/app/templates/irg-archive/error.hbs
+++ b/app/templates/irg-archive/error.hbs
@@ -1,1 +1,3 @@
-<NotFoundWarning @icon="alert-triangle" @title={{t "irg-archive.not-found"}} />
+<NotFoundWarning @icon="alert-triangle" @title={{t "irg-archive.not-found.title"}}>
+  {{t "irg-archive.not-found.explanation"}}
+</NotFoundWarning>
