--- a/app/templates/meetings/error.hbs
+++ b/app/templates/meetings/error.hbs
@@ -1,1 +1,3 @@
-<NotFoundWarning @icon="alert-triangle" @title={{t "meetings.not-found"}} />
+<NotFoundWarning @icon="alert-triangle" @title={{t "meetings.not-found.title"}}>
+  {{t "meetings.not-found.explanation"}}
+</NotFoundWarning>
