--- a/app/templates/regulatory-statements/error.hbs
+++ b/app/templates/regulatory-statements/error.hbs
@@ -1,1 +1,3 @@
-<NotFoundWarning @icon="alert-triangle" @title={{t "regulatory-statements.not-found"}} />
+<NotFoundWarning @icon="alert-triangle" @title={{t "regulatory-statements.not-found.title"}}>
+  {{t "regulatory-statements.not-found.explanation"}}
+</NotFoundWarning>
